envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            upgrade_configs:
              - upgrade_type: websocket
            codec_type: HTTP1
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: service
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/"
                  route:
                    prefix_rewrite: "/"
                    cluster: webapi
            http_filters:
            - name: envoy.router
              config: {}
        tls_context: 
          common_tls_context:
            tls_certificates: 
              certificate_chain: {filename: "./openid.pem"}
              private_key: {filename: "./openid-key.pem"}
            validation_context:
              trusted_ca: {filename: "./ca.pem"}
          require_client_certificate: true
  clusters:
  - name: webapi
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 172.17.0.3
        port_value: 8080
    
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 18082
